--- a/Front/ProEventos--App/package.json
+++ b/Front/ProEventos--App/package.json
@@ -21,14 +21,17 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "bootstrap": "^4.6.2",
     "express": "^4.18.2",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
+    "@angular/cli": "^16.2.12",
     "@angular/compiler-cli": "^17.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
