--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "po-eventos--app",
+  "name": "pro-eventos-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:PoEventos--App": "node dist/po-eventos--app/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -18,24 +17,19 @@
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.1.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^4.6.2",
-    "express": "^4.18.2",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.1.3",
+    "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
