--- a/Back/src/ProEventos.Application/ProEventos.Application.csproj
+++ b/Back/src/ProEventos.Application/ProEventos.Application.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
    <ItemGroup>
-    <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
     <ProjectReference Include="..\ProEventos.Persistence\ProEventos.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
