--- a/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-   <ItemGroup>
-    <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
-  </ItemGroup>
+  <ItemGroup>
+  <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
+</ItemGroup>  
 
    <ItemGroup>
-     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2" />    
    </ItemGroup>
 
 </Project>
