--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@angular/cli": "^17.1.3"
+    "@angular/animations": "^18.2.2",
+    "@angular/cli": "^17.1.3",
+    "ngx-toastr": "^19.0.0"
   }
 }
