--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@angular/animations": "^18.2.2",
     "@angular/cli": "^17.1.3",
+    "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0"
   }
 }
