--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
